--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     justify-content: center;
     align-items: center;
     background-image: url("images/paper.png");
@@ -29,7 +29,6 @@ body {
     min-height: 40vh;
     grid-template-columns: repeat(2, 200px);
     grid-template-rows: repeat(2, 200px);
-    
     gap: 10%;
 }
 
@@ -71,7 +70,7 @@ body {
 }
 
 .option {
-    font-size: 4rem;
+    font-size: 3rem;
     margin-top: 20%;
     margin-left: 40%;
     margin-right: 40%;
@@ -80,7 +79,7 @@ body {
 }
 
 .option:hover {
-    transform: scale(1.8);
+    transform: scale(1.5);
 }
 
 .playAgain {
@@ -94,6 +93,8 @@ body {
     width: 100px;
     font-family: fantasy;
     transition: 400ms;
+    background-color: #EBBD19;
+    border-radius: 10%;
     
 }
 
