--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     height: 100vh;
     justify-content: center;
     align-items: center;
-    background-image: url(../images/paper.png);
+    background-image: url("images/paper.png");
     font-family: fantasy;
     
 }
@@ -13,8 +13,7 @@ body {
 
 .title {
     font-size: 2rem;
-    margin-top: 3%;
-    margin-bottom: 3%;
+
 }
 
 .outcome {
@@ -27,9 +26,10 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 40vh;
+    min-width: 100vw;
     grid-template-columns: repeat(2, 200px);
     grid-template-rows: repeat(2, 200px);
-    gap: 10%;
+    gap: 20%;
 }
 
 .choice {
@@ -67,6 +67,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 10vh;
 }
 
 .option {
@@ -89,9 +90,10 @@ body {
 .playAgainBtn {
     justify-content: center;
     align-items: center;
-    height: 35px;
-    width: 100px;
+    height: 5vh;
+    width: 10vw;
     font-family: fantasy;
+    font-size: 20px;
     transition: 400ms;
     background-color: #EBBD19;
     border-radius: 10%;
@@ -99,5 +101,5 @@ body {
 }
 
 .playAgainBtn:hover {
-    transform: scale(2.0);
+    transform: scale(1.5);
 }
